<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.feragusper.idealistachallenge.libraries.design.ImageCarouselView
            android:id="@+id/imageCarousel"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCarousel">

            <TextView
                android:id="@+id/textTitle"
                style="@style/TextAppearance.App.Title.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Piso en calle de Lagasca, Barrio de Salamanca, Madrid" />

            <TextView
                android:id="@+id/textSubtitle"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xsmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle"
                tools:text="Piso en calle de Lagasca, Barrio de Salamanca, Madrid" />

            <TextView
                android:id="@+id/text_price"
                style="@style/TextAppearance.App.Headline.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSubtitle"
                tools:text="€1,200,000" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/favoriteButton"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:button="@drawable/selector_favorite"
                android:contentDescription="@string/content_description_favorite_button"
                app:buttonTint="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_price"
                app:layout_constraintTop_toTopOf="@id/text_price" />

            <TextView
                android:id="@+id/favoriteDate"
                style="@style/TextAppearance.App.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoriteButton"
                tools:text="Marcado como favorito el 03/03/2025" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerRoomsSizeFloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoriteDate">

                <TextView
                    android:id="@+id/textSize"
                    style="@style/TextAppearance.App.Body.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_square"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="133 m²" />

                <TextView
                    android:id="@+id/textRooms"
                    style="@style/TextAppearance.App.Body.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_room"
                    app:layout_constraintStart_toEndOf="@id/textSize"
                    app:layout_constraintTop_toTopOf="@id/textSize"
                    tools:text="3 hab." />

                <TextView
                    android:id="@+id/textBathrooms"
                    style="@style/TextAppearance.App.Body.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_shower"
                    app:layout_constraintStart_toEndOf="@id/textRooms"
                    app:layout_constraintTop_toTopOf="@id/textRooms"
                    tools:text="2 baños" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/spacing_medium"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/containerRoomsSizeFloor" />

            <TextView
                android:id="@+id/descriptionTitle"
                style="@style/TextAppearance.App.Title.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/description_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator1" />

            <TextView
                android:id="@+id/text_description"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:ellipsize="end"
                android:maxLines="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                tools:text="Gran oportunidad de inversión en una de las mejores zonas de Madrid..." />

            <Button
                android:id="@+id/btnExpandDescription"
                style="@style/TextAppearance.App.Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/view_more"
                android:textColor="@color/colorSecondary"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_description" />

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/spacing_medium"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnExpandDescription" />

            <TextView
                android:id="@+id/characteristicsTitle"
                style="@style/TextAppearance.App.Title.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/characteristics_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator2" />

            <TextView
                android:id="@+id/text_characteristics"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characteristicsTitle"
                tools:text="340 m construidos" />

            <TextView
                android:id="@+id/buildingTitle"
                style="@style/TextAppearance.App.Title.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/building"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_characteristics" />

            <TextView
                android:id="@+id/text_building"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buildingTitle"
                tools:text="340 m construidos" />

            <TextView
                android:id="@+id/energyCertificationTitle"
                style="@style/TextAppearance.App.Title.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/energy_certification_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_building" />

            <TextView
                android:id="@+id/text_energy_certification"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/energyCertificationTitle"
                tools:text="Certificación: B - Alta eficiencia" />

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/spacing_medium"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_energy_certification" />

            <TextView
                android:id="@+id/text_modification_date"
                style="@style/TextAppearance.App.Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator3"
                tools:text="Anuncio actualizado hace 11 días" />

            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/spacing_medium"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_modification_date" />

            <TextView
                android:id="@+id/priceTitle"
                style="@style/TextAppearance.App.Title.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator4" />

            <TextView
                android:id="@+id/text_total_price"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceTitle"
                tools:text="880.000 $" />

            <TextView
                android:id="@+id/text_price_per_square_meter"
                style="@style/TextAppearance.App.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_total_price"
                tools:text="2.588 $/m2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>